refactor: corregido proyecciones y mapeos faltantes